Task: home page for project

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-
+  <link href="../dist/css/style.css" rel="stylesheet" type="text/css">
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -23,8 +23,27 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <h1> hello there </h1>
+  <p></p>
+
+  <img class="image" src="https://www.freelogodesign.org/file/app/client/thumb/9da6dc75-0a8b-494c-bac6-f2b548a72800_200x200.png?1583266975233" alt="logo">
+  <div id = "menu">
+    <header>
+      <menu>
+        <ul> <a href= "" > Webstorm</a> </ul>
+        <ul> <a href= "" > GIT</a> </ul>
+        <ul> <a href= "goldenRatio.html" > Golden Ratio</a> </ul>
+      </menu>
+    </header>
+    <h1> Welcome to our Major Project </h1>
+
+    <p>
+        This project was made by Tarik Amraoui, Shivan and Urvish.
+        Im honestly not sure what to right here, its crazy that we
+        have to do this project but I don't mind it.
+    </p>
+
+  </div>
+  <p></p>
   <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
   <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js" integrity="{{JQUERY_SRI_HASH}}" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
@@ -40,3 +59,4 @@
 </body>
 
 </html>
+<footer> <small>&copy; Copyright 2020, Tarik Amraoui</small> </footer>
