Task: home page for project

--- a/src/goldenRatio.html
+++ b/src/goldenRatio.html
@@ -5,8 +5,12 @@
   <meta charset="UTF-8">
   <title>Tarik</title>
   <link href="../dist/css/style.css" rel="stylesheet" type="text/css">
-  <img class="image" src="https://www.freelogodesign.org/file/app/client/thumb/9da6dc75-0a8b-494c-bac6-f2b548a72800_200x200.png?1583266975233" alt="logo" >
 
+=
+<div id="content">
+  <button id="toggle">Hide / Show sidebar</button>
+</div>
+</body>
 
 </head>
 <body>
@@ -21,7 +25,8 @@
     </menu>
   </header>
   <h1>Golden Ratio</h1>
-  <h2> This is the blah blah</h2>
+  <h2> What is the Golden Ratio?</h2>
+
   <main>
 
     <p>
@@ -34,6 +39,8 @@
       voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus,
       ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."
     </p>
+    <h2>How does the Golden Ratio Work?</h2>
+    <p> Dont worry about it honestly</p>
   </main>
   <footer><small>&copy; Copyright 2020, Tarik Amraoui</small></footer>
 </div>
