--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,24 @@
 <!doctype html>
 <html class="no-js" lang="">
 
+<body>
+<div id="sidebar">
+  <img id="img" class="image"
+       src="https://www.freelogodesign.org/file/app/client/thumb/9da6dc75-0a8b-494c-bac6-f2b548a72800_200x200.png?1583266975233"
+       alt="logo">
+  <menu>
+    <ul> <a href= "" > Webstorm</a> </ul>
+    <ul> <a href= "" > GIT</a> </ul>
+    <ul> <a href= "goldenRatio.html" > Golden Ratio</a> </ul>
+
+  </menu>
+
+</div>
+<div id="content">
+  <button id="toggle">Hide / Show sidebar</button>
+</div>
+</body>
+
 <head>
   <meta charset="utf-8">
   <title></title>
@@ -13,7 +31,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-  <link href="../dist/css/style.css" rel="stylesheet" type="text/css">
+  <link href="../dist/css/style2.css" rel="stylesheet" type="text/css">
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -25,22 +43,19 @@
   <!-- Add your site or application content here -->
   <p></p>
 
-  <img class="image" src="https://www.freelogodesign.org/file/app/client/thumb/9da6dc75-0a8b-494c-bac6-f2b548a72800_200x200.png?1583266975233" alt="logo">
+
   <div id = "menu">
     <header>
-      <menu>
-        <ul> <a href= "" > Webstorm</a> </ul>
-        <ul> <a href= "" > GIT</a> </ul>
-        <ul> <a href= "goldenRatio.html" > Golden Ratio</a> </ul>
-      </menu>
     </header>
-    <h1> Welcome to our Major Project </h1>
+    <img src="../dist/img/ocean2.jpg" height="320" width="640"/>
 
     <p>
         This project was made by Tarik Amraoui, Shivan and Urvish.
         Im honestly not sure what to right here, its crazy that we
         have to do this project but I don't mind it.
     </p>
+    <h2> GIT</h2>
+    <h3> Golden</h3>
 
   </div>
   <p></p>
