--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <menu>
     <ul> <a href= "" > Webstorm</a> </ul>
     <ul> <a href= "" > GIT</a> </ul>
-    <ul> <a href= "goldenRatio.html" > Golden Ratio</a> </ul>
+    <ul> <a href= "../dist/goldenRatio.html" > Golden Ratio</a> </ul>
 
   </menu>
 
@@ -29,8 +29,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../dist/css/normalize.css">
+  <link rel="stylesheet" href="../dist/css/main.css">
   <link href="../dist/css/style2.css" rel="stylesheet" type="text/css">
   <meta name="theme-color" content="#fafafa">
 </head>
